# temperature-pico-c

./: CMakeLists.txt  README.md  temperature.c  temperature_circuit.fzz
circuit_schema/: temperature_circuit.fzz
